Shifting things around

--- a/lib/jade/index.jade
+++ b/lib/jade/index.jade
@@ -10,3 +10,9 @@ block content
 
     +component("resource")
       a(href="https://github.com/ajkochanowicz/kickstart/") GitHub
+
+  .foo
+
+  +component("bar")
+    .foo Press me
+    .bar-text ...
