--- a/theme.sass
+++ b/theme.sass
@@ -1,7 +1,9 @@
 @import "kickstart"
 
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic,300)
+
 *
-  font-family: "Helvetica neue", helvetica, sans-serif
+  font-family: 'museo-sans', 'Lato', 'helvetica neue', sans-serif
   color: #333
 
 =table
