--- a/kickstart.sass
+++ b/kickstart.sass
@@ -1,131 +1,5 @@
-<<<<<<< HEAD
 // 1.0 NORMALIZATION
 // =================
-
-html
-  font-family: sans-serif
-
-body
-  margin: 0
-
-article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary
-  display: block
-
-audio, canvas, progress, video
-  display: inline-block
-  vertical-align: baseline
-
-audio:not([controls])
-  display: none
-
-[hidden], template
-  display: none
-
-a
-  background: transparent
-  &:active, &:hover
-    outline: 0
-
-abbr[title]
-  border-bottom: 1px dotted
-
-dfn
-  font-style: italic
-
-small
-  font-size: 80%
-
-sub
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
-sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
-  top: -0.5em
-sub
-  bottom: -0.25em
-
-img
-  border: 0
-
-svg:not(:root)
-  overflow: hidden
-
-hr
-  -moz-box-sizing: content-box
-  box-sizing: content-box
-  height: 0
-
-pre
-  overflow: auto
-
-code, kbd, pre, samp
-  font-family: monospace, monospace
-  font-size: 1em
-
-button, input, optgroup, select, textarea
-  color: inherit
-  font: inherit
-  margin: 0
-
-button
-  overflow: visible
-  text-transform: none
-
-select
-  text-transform: none
-
-button, html input[type="button"]
-  -webkit-appearance: button
-  cursor: pointer
-
-input
-  &[type="reset"], &[type="submit"]
-    -webkit-appearance: button
-    cursor: pointer
-
-button[disabled]
-  cursor: default
-
-button
-  border: 0
-  padding: 0
-
-input
-  line-height: normal
-
-  &[type="checkbox"], &[type="radio"]
-    box-sizing: border-box
-    padding: 0
-
-  &[type="search"]
-    box-sizing: content-box
-
-fieldset
-  border: 1px solid #c0c0c0
-  margin: 0 2px
-  padding: 0.35em 0.625em 0.75em
-
-legend
-  border: 0
-  padding: 0
-
-textarea
-  overflow: auto
-
-optgroup
-  font-weight: bold
-
-// 1 CORE STYLES
-// ===========
-=======
-// 1.0.0 NORMALIZATION
-// ===================
->>>>>>> 4.0-wip
 
 html
   font-family: sans-serif
@@ -296,13 +170,6 @@ iframe
   line-height: $size*$default-line-height
   font-family: $default-font-family
 
-// Block, component, etc. selector shortcuts
-
-// Block
-=b($name)
-  [data-block="#{$name}"]
-    @content
-
 // Component
 =component($name)
   [data-component="#{$name}"]
@@ -318,12 +185,8 @@ iframe
   #{$selector}
     @content
 
-<<<<<<< HEAD
-// 1.3 Animations
-=======
 // 2.3.0 Animations
 // ----------------
->>>>>>> 4.0-wip
 
 @keyframes fadeInDown
   0%
@@ -968,5 +831,5 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
 =table($args...)
   +table-default($args...)
 
-=wrapper($fluid)
+=wrapper($args...)
   +wrapper-default($args...)
