Adding white_dark

--- a/kickstart.sass
+++ b/kickstart.sass
@@ -16,7 +16,8 @@ $gray_lighter: #AAA
 $gray_lightest: #BBB
 $white_darkest: #CCC
 $white_darker: #EDEDED
-$white: #F7F7F7
+$white_dark: #F7F7F7
+$white: #FFFFFF
 
 // 1.2 Colors
 // ----------
