Using direct apply

--- a/kickstart.sass
+++ b/kickstart.sass
@@ -674,7 +674,7 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
 // 3.3.0 Alerts
 // ------------
 =alert-default
-  +root-element
+  padding: 4px 6px
   padding: $space/2
   background: cornflowerblue
   color: white
@@ -682,14 +682,14 @@ $showFullColumns:    $desktop          // Actual user-defined column measurement
     bottom: $space
 
   p
-    +p
+    +p-default
     color: inherit
 
   > *:last-child
     margin-bottom: 0
 
   h1
-    +heading-xs
+    +heading-xs-default
     color: inherit
 
   a
@@ -1336,7 +1336,7 @@ select
     border-color: $color
 
 =growl-default
-  +alert
+  +alert-default
   @content
 
 =hr-default
@@ -1994,8 +1994,149 @@ progress
 // Direct applications of the above mixins...just in case your theme file didn't
 // specify them already.
 
+body
+  &.dismiss-modal
+    cursor: pointer
+
+[disabled]
+  cursor: not-allowed
+
+// X.X.X Buttons
+// -------------
+
+button,
+input[type="submit"],
+input[type="button"]
+  +button-default
+
+input[type="file"]
+  background: transparent
+
+// Doesn't work with commas. WTF?
+// http://stackoverflow.com/questions/16982449/why-isnt-it-possible-to-combine-vendor-specific-pseudo-elements-classes-into-on
+input[type="file"]::-ms-browse
+  +button-default
+
+input[type="file"]::-ms-value
+  +input-styles
+  background: white
+  margin-right: $space/4
+
+input[type="file"]::-webkit-file-upload-button
+  +button-default
+
++dropdown_menu-default
+
 =table($args...)
   +table-default($args...)
 
 =wrapper($args...)
   +wrapper-default($args...)
+
+// Forms
+// -----
+
+%error_message
+  font-style: italic
+  margin:
+    top: 7px
+    bottom: 14px
+
+form
+  .errors, .warnings, .successes
+    p
+      @extend %error_message
+
+  .errors
+    +field-colors($red)
+
+  .warnings
+    +field-colors($yellow)
+
+  .successes
+    +field-colors($green)
+
+  p
+    &.error, &.warning, &.success
+      @extend %error_message
+
+  label, span, p
+    &.error
+      color: $red
+
+    &.warning
+      color: $yellow
+
+    &.success
+      color: $green
+
+  input, select
+    &.error
+      border-color: $red
+
+    &.warning
+      border-color: $yellow
+
+    &.success
+      border-color: $green
+
+// X.X.X. Growls
+// -------------
+
+.growl_container
+  position: fixed
+  top: 0
+  right: 0
+  padding: $space/2
+  z-index: 2000
+  width: 300px
+  overflow: auto
+  max-height: 100vh
+
+.growl
+  box-shadow: 0px 0px $space/2 rgba(0, 0, 0, 0.5)
+  transition: all 0.5s
+
+  &.show, &.hide
+    +fadeInDown
+
+  &.hide
+    animation-direction: reverse
+
+  +growl-default
+
+// X.X.X. Status
+// -------------
+
+.status_bar
+  +status_bar
+    .status_bar-status
+      +label-default
+
+      &[data-type="status-red"]
+        background: $red
+
+      &[data-type="status-orange"]
+        background: $orange
+
+      &[data-type="status-yellow"]
+        background: $yellow
+        color: $black_lighter
+
+      &[data-type="status-green"]
+        background: $green
+
+      &[data-type="status-blue"]
+        background: $blue
+
+      &[data-type="status-violet"]
+        background: $violet
+
+// X.X.X Tabs
+// ----------
+
+[data-panel]
+  display: none
+
+  &.open
+    display: block
